python/test-data/testTypesDict2.err
Traceback (most recent call last):
  File "test-data/testTypesDict2.py", line 10, in <module>
    foo({'x': lambda: "1", 'y': lambda: 42}) # error because the 2nd functions returns an int
  File "test-data/testTypesDict2.py", line 6, in foo
    res.append(f())
WyppTypeError: dict_items is not an Iterable[tuple[str, Callable[[], str]]]
given:    dict_items([('x', <function <lambda> at 0x00>), ('y', <function <lambda> at 0x00>)])
expected: value of type Iterable[tuple[str, Callable[[], str]]]

context: foo(d: dict[str, Callable[[], str]]) -> list[str]
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
declared at: test-data/testTypesDict2.py:3
caused by: test-data/testTypesDict2.py:10
  | foo({'x': lambda: "1", 'y': lambda: 42}) # error because the 2nd functions returns an int
